logs/dag_id=stock_kafka_pipeline/run_id=scheduled__2025-04-25T05:20:00+00:00/task_id=run_spark_test/attempt=2.log
[2025-04-25T05:39:09.475+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2025-04-25T05:39:09.495+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: stock_kafka_pipeline.run_spark_test scheduled__2025-04-25T05:20:00+00:00 [queued]>
[2025-04-25T05:39:09.500+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: stock_kafka_pipeline.run_spark_test scheduled__2025-04-25T05:20:00+00:00 [queued]>
[2025-04-25T05:39:09.500+0000] {taskinstance.py:2306} INFO - Starting attempt 2 of 2
[2025-04-25T05:39:09.510+0000] {taskinstance.py:2330} INFO - Executing <Task(BashOperator): run_spark_test> on 2025-04-25 05:20:00+00:00
[2025-04-25T05:39:09.515+0000] {standard_task_runner.py:63} INFO - Started process 203 to run task
[2025-04-25T05:39:09.517+0000] {standard_task_runner.py:90} INFO - Running: ['airflow', 'tasks', 'run', 'stock_kafka_pipeline', 'run_spark_test', 'scheduled__2025-04-25T05:20:00+00:00', '--job-id', '322', '--raw', '--subdir', 'DAGS_FOLDER/test.py', '--cfg-path', '/tmp/tmprnc0kg0x']
[2025-04-25T05:39:09.518+0000] {standard_task_runner.py:91} INFO - Job 322: Subtask run_spark_test
[2025-04-25T05:39:09.545+0000] {task_command.py:426} INFO - Running <TaskInstance: stock_kafka_pipeline.run_spark_test scheduled__2025-04-25T05:20:00+00:00 [running]> on host b8ca48d3e41a
[2025-04-25T05:39:09.593+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='airflow' AIRFLOW_CTX_DAG_ID='stock_kafka_pipeline' AIRFLOW_CTX_TASK_ID='run_spark_test' AIRFLOW_CTX_EXECUTION_DATE='2025-04-25T05:20:00+00:00' AIRFLOW_CTX_TRY_NUMBER='2' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2025-04-25T05:20:00+00:00'
[2025-04-25T05:39:09.593+0000] {taskinstance.py:430} INFO - ::endgroup::
[2025-04-25T05:39:09.604+0000] {subprocess.py:63} INFO - Tmp dir root location: /tmp
[2025-04-25T05:39:09.604+0000] {subprocess.py:75} INFO - Running command: ['/usr/bin/bash', '-c', 'spark-submit /opt/airflow/Scripts/test.py']
[2025-04-25T05:39:09.616+0000] {subprocess.py:86} INFO - Output:
[2025-04-25T05:39:11.330+0000] {subprocess.py:93} INFO -   File "/opt/airflow/Scripts/test.py", line 12
[2025-04-25T05:39:11.330+0000] {subprocess.py:93} INFO -     .master("spark://172.21.0.8:7077") \  # Use spark:// protocol and correct port
[2025-04-25T05:39:11.330+0000] {subprocess.py:93} INFO -                                                                                   ^
[2025-04-25T05:39:11.330+0000] {subprocess.py:93} INFO - SyntaxError: unexpected character after line continuation character
[2025-04-25T05:39:11.341+0000] {subprocess.py:93} INFO - 25/04/25 05:39:11 INFO ShutdownHookManager: Shutdown hook called
[2025-04-25T05:39:11.344+0000] {subprocess.py:93} INFO - 25/04/25 05:39:11 INFO ShutdownHookManager: Deleting directory /tmp/spark-b14fe59d-395b-4b54-9f62-36c67cb68ac8
[2025-04-25T05:39:11.377+0000] {subprocess.py:97} INFO - Command exited with return code 1
[2025-04-25T05:39:11.378+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2025-04-25T05:39:11.384+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 401, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/bash.py", line 243, in execute
    raise AirflowException(
airflow.exceptions.AirflowException: Bash command failed. The command returned a non-zero exit code 1.
[2025-04-25T05:39:11.387+0000] {taskinstance.py:1206} INFO - Marking task as FAILED. dag_id=stock_kafka_pipeline, task_id=run_spark_test, run_id=scheduled__2025-04-25T05:20:00+00:00, execution_date=20250425T052000, start_date=20250425T053909, end_date=20250425T053911
[2025-04-25T05:39:11.399+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 322 for task run_spark_test (Bash command failed. The command returned a non-zero exit code 1.; 203)
[2025-04-25T05:39:11.413+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2025-04-25T05:39:11.424+0000] {taskinstance.py:3503} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2025-04-25T05:39:11.424+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
